[project]
name = "agentic-trading-floor-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.20.0",
    "mcp-server-fetch>=2025.4.7",
    "openai>=2.7.1",
    "openai-agents>=0.5.0",
    "pydantic>=2.12.4",
]
